# Isabelle-MCP

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  diagnose.sh  pyproject.toml  run_tests.sh
.claude/: README.md  mcp.json
.github/workflows/: ci.yml  release-conda.yml
conda/: recipe.yaml
docs/: API_DESIGN.md  ARCHITECTURE.md  COMPONENT_INSTALL_PLAN.md  EVAL_REDESIGN.md  SPECIFICATION.md  TECH_NOTE.md  architecture.md
examples/: README.md  mcp_config.json  proof_example.thy  simple_theory.thy  usage_example.py
scripts/: check_component.py  install.sh  notify-file-change.py
src/isa_lsp/: __init__.py  evaluation.py  file_watcher.py  instructions.py  lsp_client.py  models.py  processing.py  server.py
src/isa_lsp/tools/: __init__.py  command_output.py  completions.py  definition.py  diagnostics.py  goal.py  highlights.py  hover.py  preview.py  session.py
src/isa_lsp/utils/: __init__.py  core.py  errors.py  formatters.py  isabelle_tokens.py  positions.py  uri_utils.py
src/isabelle_mcp/: __init__.py  component.py  evaluation.py  file_watcher.py  install.py  instructions.py  lsp_client.py  models.py  processing.py  server.py  unicode_guard.py
src/isabelle_mcp/scala/Isabelle2025-2/ML/: mcp_prelude.ML
src/isabelle_mcp/scala/Isabelle2025-2/docs/: CANCELLATION.md
src/isabelle_mcp/scala/Isabelle2025-2/etc/: build.props  settings
src/isabelle_mcp/scala/Isabelle2025-2/src/: channel.scala  dynamic_output.scala  language_server.scala  lsp.scala  mcp_main.scala  pretty_text_panel.scala  preview_panel.scala  state_panel.scala  vscode_model.scala  vscode_rendering.scala  vscode_resources.scala  vscode_session.scala  vscode_sledgehammer.scala  vscode_spell_checker.scala
src/isabelle_mcp/tools/: __init__.py  command_output.py  definition.py  diagnostics.py  find_theorems.py  goal.py  highlights.py  hover.py  local_occurrences.py  session.py
src/isabelle_mcp/utils/: __init__.py  core.py  formatters.py  isabelle_symbols.py  isabelle_tokens.py
tests/: README.md  __init__.py  conftest.py  test_component.py  test_edge_cases.py  test_file_watcher.py  test_heap_sources.py  test_install.py  test_integration.py  test_isabelle_tokens.py  test_lsp_client.py  test_models.py  test_processing.py  test_server.py  test_tools_command_output.py  test_tools_completions.py  test_tools_definition.py  test_tools_diagnostics.py  test_tools_evaluate.py  test_tools_find_theorems.py  test_tools_goal.py  test_tools_highlights.py  test_tools_hover.py  test_tools_local_occurrences.py  test_tools_preview.py  test_tools_session.py  test_unicode_guard.py  test_utils.py  test_utils_advanced.py
tests/data/: find_theorems_sample.html
tests/integration/: test_file_sync_e2e.py
