[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isabelle-mcp"
dynamic = ["version"]
description = "MCP server bridging AI agents with the Isabelle proof assistant via its LSP/PIDE interface"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Qiyuan Xu", email = "xqyww123@gmail.com"}
]
keywords = ["isabelle", "theorem-prover", "mcp", "lsp", "ai-assistance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastmcp>=3.2,<4",
    "mcp>=1.0.0",
    "my-better-isabelle-prover>=0.1.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/xqyww123/Isabelle-MCP"
Documentation = "https://github.com/xqyww123/Isabelle-MCP/tree/main/docs"
Repository = "https://github.com/xqyww123/Isabelle-MCP"
Issues = "https://github.com/xqyww123/Isabelle-MCP/issues"
Changelog = "https://github.com/xqyww123/Isabelle-MCP/blob/main/CHANGELOG.md"

[project.scripts]
isabelle-mcp = "isabelle_mcp.server:main"

[tool.setuptools.dynamic]
version = {attr = "isabelle_mcp.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
isabelle_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
